# d-training-manager

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  pyproject.toml  requirements.dev.txt  requirements.txt  samconfig.toml  template.yaml
hooks/: pre-commit
src/d_training_manager/: __main__.py  telegram.py
src/d_training_manager/app/: __init__.py  webhook_telegram.py
src/d_training_manager/config/: __init__.py  app.py  database.py  telegram.py
src/d_training_manager/database/: models.py  registry_user.py  user_registry.py
src/d_training_manager/telegram/: bot.py  telegram_bot.py  telegram_user.py
src/d_training_manager/telegram/handlers/: handler_contact.py  handler_help.py  handler_start.py
src/d_training_manager/telegram/middleware/: auth.py
tests/: conftest.py
tests/factories/: database.py
tests/feature/app/: test_webhook_telegram.py
tests/feature/telegram/handlers/: test_handler_contact.py  test_handler_help.py  test_handler_start.py
tests/fixtures/: app.py  telegram.py
