[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dynamic = ["dependencies", "optional-dependencies"]
name = "d-training-manager"
requires-python = "==3.13"
version = "0.0.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = ["telebot.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
useLibraryCodeForTypes = true
typeCheckingMode = "standard"

[tool.pytest.ini_options]
addopts = "-ra"
env = [
    "POWERTOOLS_SERVICE_NAME=d-training-manager-test",
    "POWERTOOLS_LOG_LEVEL=INFO",
    "POWERTOOLS_LOGGER_LOG_EVENT=true",
    "POWERTOOLS_METRICS_NAMESPACE=DTrainingManagerTest",
    "STAGE=test",
]
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements.dev.txt"] } }
